--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1 class="text-center">K8S +  Demo  23rd April,2020</h1>
+		<h1 class="text-center">K8S +  Demo  23rd April,2020 New</h1>
 		<div class="col-md-6">
 			<form name="saveUser" action="/save" method="post"
 				class="form-horizontal">
